--- a/TravelTalk/ChatTab/ChatTableViewCell.xib
+++ b/TravelTalk/ChatTab/ChatTableViewCell.xib
@@ -16,35 +16,46 @@
                 <rect key="frame" x="0.0" y="0.0" width="340" height="89"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BqS-fp-2ox">
-                        <rect key="frame" x="14" y="8" width="67" height="73"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BqS-fp-2ox">
+                        <rect key="frame" x="20" y="10" width="69" height="69"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="BqS-fp-2ox" secondAttribute="height" id="s8m-uV-E02"/>
+                        </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CRn-a7-F2s">
-                        <rect key="frame" x="100" y="17" width="42" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X5t-PU-MG4">
+                        <rect key="frame" x="97" y="49" width="42" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X5t-PU-MG4">
-                        <rect key="frame" x="106" y="46" width="42" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0IO-JZ-kqF">
+                        <rect key="frame" x="282" y="20" width="42" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0IO-JZ-kqF">
-                        <rect key="frame" x="274" y="16" width="42" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CRn-a7-F2s">
+                        <rect key="frame" x="97" y="20" width="42" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="BqS-fp-2ox" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="72y-nK-ukO"/>
+                    <constraint firstItem="0IO-JZ-kqF" firstAttribute="centerY" secondItem="CRn-a7-F2s" secondAttribute="centerY" id="Jum-yd-h44"/>
+                    <constraint firstAttribute="bottom" secondItem="BqS-fp-2ox" secondAttribute="bottom" constant="10" id="WXL-yM-v8B"/>
+                    <constraint firstItem="CRn-a7-F2s" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="XCk-uQ-tOU"/>
+                    <constraint firstAttribute="trailing" secondItem="0IO-JZ-kqF" secondAttribute="trailing" constant="16" id="aUQ-Qg-gxU"/>
+                    <constraint firstItem="X5t-PU-MG4" firstAttribute="leading" secondItem="BqS-fp-2ox" secondAttribute="trailing" constant="8" id="cKw-Zz-i5e"/>
+                    <constraint firstItem="CRn-a7-F2s" firstAttribute="leading" secondItem="BqS-fp-2ox" secondAttribute="trailing" constant="8" id="dzD-2I-C1G"/>
+                    <constraint firstItem="BqS-fp-2ox" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="lLB-q8-MPS"/>
+                    <constraint firstItem="X5t-PU-MG4" firstAttribute="top" secondItem="CRn-a7-F2s" secondAttribute="bottom" constant="8" id="po1-YF-kNg"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="lastMessageTimeLabel" destination="0IO-JZ-kqF" id="01a-wJ-zbZ"/>
                 <outlet property="messageLabel" destination="X5t-PU-MG4" id="Yln-Kd-jBu"/>
                 <outlet property="profileImage" destination="BqS-fp-2ox" id="KVK-WZ-7ii"/>
                 <outlet property="userNameLabel" destination="CRn-a7-F2s" id="bpM-tD-PyK"/>
