--- a/TravelTalk/Base.lproj/Main.storyboard
+++ b/TravelTalk/Base.lproj/Main.storyboard
@@ -67,7 +67,7 @@
                                     <constraint firstAttribute="height" constant="0.5" id="Nrs-Uh-oSO"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="OrK-hM-m99">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelectionDuringEditing="YES" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="OrK-hM-m99">
                                 <rect key="frame" x="0.0" y="155.66666666666669" width="393" height="613.33333333333326"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
@@ -135,9 +135,73 @@
             </objects>
             <point key="canvasLocation" x="-750.38167938931292" y="458.45070422535213"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="2Fl-5l-58O">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="mpG-nI-FVQ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="oT5-FN-GeW">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="fgF-5I-xDX" kind="relationship" relationship="rootViewController" id="3QM-0E-KOH"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Xde-lo-TE8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1852.6717557251907" y="-244.36619718309859"/>
+        </scene>
+        <!--채팅바바바앙-->
+        <scene sceneID="A8S-om-xgm">
+            <objects>
+                <viewController storyboardIdentifier="ChatRoomViewController" id="fgF-5I-xDX" customClass="ChatRoomViewController" customModule="TravelTalk" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="KJl-Zp-oGx">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="44Q-2K-Tol">
+                                <rect key="frame" x="0.0" y="103" width="393" height="681"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xJL-HL-HrB">
+                                <rect key="frame" x="20" y="784" width="353" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="sGH-b2-2KB"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="44Q-2K-Tol" firstAttribute="leading" secondItem="sGH-b2-2KB" secondAttribute="leading" id="3NX-i7-h3t"/>
+                            <constraint firstItem="sGH-b2-2KB" firstAttribute="trailing" secondItem="xJL-HL-HrB" secondAttribute="trailing" constant="20" id="7d0-Tj-Zep"/>
+                            <constraint firstItem="sGH-b2-2KB" firstAttribute="trailing" secondItem="44Q-2K-Tol" secondAttribute="trailing" id="Kaj-Ww-QT6"/>
+                            <constraint firstItem="xJL-HL-HrB" firstAttribute="leading" secondItem="sGH-b2-2KB" secondAttribute="leading" constant="20" id="Vko-2D-NoD"/>
+                            <constraint firstItem="44Q-2K-Tol" firstAttribute="top" secondItem="sGH-b2-2KB" secondAttribute="top" id="ddO-18-T0V"/>
+                            <constraint firstItem="sGH-b2-2KB" firstAttribute="bottom" secondItem="xJL-HL-HrB" secondAttribute="bottom" id="lhc-Sq-Z3C"/>
+                            <constraint firstItem="xJL-HL-HrB" firstAttribute="top" secondItem="44Q-2K-Tol" secondAttribute="bottom" id="y73-tR-62P"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="채팅바바바앙" id="fPr-gw-kLy">
+                        <barButtonItem key="leftBarButtonItem" image="chevron.left" catalog="system" id="Mmw-bZ-2jd">
+                            <connections>
+                                <action selector="navBarColseTapped:" destination="fgF-5I-xDX" id="F3L-h9-SIk"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="chatRoomTableView" destination="44Q-2K-Tol" id="dfP-fy-drS"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9Ol-Ui-GAy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2914" y="-244"/>
+        </scene>
     </scenes>
     <resources>
         <image name="bubble.right.fill" catalog="system" width="128" height="110"/>
+        <image name="chevron.left" catalog="system" width="97" height="128"/>
         <image name="formfitting.gamecontroller.fill" catalog="system" width="128" height="64"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
