--- a/TravelTalk/ChatTab/ChatRoom/PartnerChatTableViewCell.xib
+++ b/TravelTalk/ChatTab/ChatRoom/PartnerChatTableViewCell.xib
@@ -10,48 +10,77 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PartnerChatTableViewCell" rowHeight="117" id="KGk-i7-Jjw" customClass="PartnerChatTableViewCell" customModule="TravelTalk" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="368" height="117"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PartnerChatTableViewCell" rowHeight="113" id="KGk-i7-Jjw" customClass="PartnerChatTableViewCell" customModule="TravelTalk" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="446" height="113"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="368" height="117"/>
+                <rect key="frame" x="0.0" y="0.0" width="446" height="113"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3vs-Pr-HqH">
-                        <rect key="frame" x="20" y="18" width="87" height="74"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6kE-5e-Q51">
+                        <rect key="frame" x="20" y="8" width="88" height="88"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="88" id="Iaz-UP-PIX"/>
+                            <constraint firstAttribute="width" constant="88" id="i2C-uT-5Pp"/>
+                        </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gxw-Hz-78F">
-                        <rect key="frame" x="179" y="18" width="42" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0ic-eI-SGv">
+                        <rect key="frame" x="115.99999999999999" y="14" width="41.333333333333329" height="24"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="24" id="IxG-AN-2UM"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sea-tX-9Fv">
-                        <rect key="frame" x="131" y="47" width="217" height="45"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0hh-Kc-FQQ">
+                        <rect key="frame" x="116" y="46" width="58" height="59"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZfW-77-BAU">
-                                <rect key="frame" x="73" y="14" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ewr-CV-2SS">
+                                <rect key="frame" x="8" y="8" width="42" height="43"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="Ewr-CV-2SS" secondAttribute="bottom" constant="8" id="KdC-o7-3v5"/>
+                            <constraint firstItem="Ewr-CV-2SS" firstAttribute="leading" secondItem="0hh-Kc-FQQ" secondAttribute="leading" constant="8" id="OBg-PM-tdR"/>
+                            <constraint firstItem="Ewr-CV-2SS" firstAttribute="top" secondItem="0hh-Kc-FQQ" secondAttribute="top" constant="8" id="gVZ-T9-Mgw"/>
+                            <constraint firstAttribute="trailing" secondItem="Ewr-CV-2SS" secondAttribute="trailing" constant="8" id="laj-Wr-1wF"/>
+                        </constraints>
                     </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZoM-6Z-XBo">
+                        <rect key="frame" x="178" y="84" width="42" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="ZoM-6Z-XBo" firstAttribute="leading" secondItem="0hh-Kc-FQQ" secondAttribute="trailing" constant="4" id="8Ug-bS-CPK"/>
+                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ZoM-6Z-XBo" secondAttribute="trailing" constant="44" id="AHv-vK-FcB"/>
+                    <constraint firstItem="ZoM-6Z-XBo" firstAttribute="bottom" secondItem="0hh-Kc-FQQ" secondAttribute="bottom" id="B0G-pP-Sh4"/>
+                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="0ic-eI-SGv" secondAttribute="trailing" constant="100" id="IUt-Om-0Pg"/>
+                    <constraint firstItem="6kE-5e-Q51" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="Rog-xJ-GOh"/>
+                    <constraint firstItem="0hh-Kc-FQQ" firstAttribute="top" secondItem="0ic-eI-SGv" secondAttribute="bottom" constant="8" id="ZIN-jF-9Xa"/>
+                    <constraint firstItem="0hh-Kc-FQQ" firstAttribute="leading" secondItem="6kE-5e-Q51" secondAttribute="trailing" constant="8" id="dNA-sv-Z3d"/>
+                    <constraint firstItem="6kE-5e-Q51" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="hf3-9p-24N"/>
+                    <constraint firstAttribute="bottom" secondItem="0hh-Kc-FQQ" secondAttribute="bottom" constant="8" id="kwc-vG-LgR"/>
+                    <constraint firstItem="0ic-eI-SGv" firstAttribute="leading" secondItem="6kE-5e-Q51" secondAttribute="trailing" constant="8" id="rXO-Pf-fEa"/>
+                    <constraint firstItem="0ic-eI-SGv" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="14" id="tIM-T7-Yg0"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="chatContainer" destination="sea-tX-9Fv" id="Yeu-r8-dGa"/>
-                <outlet property="chatContentLabel" destination="ZfW-77-BAU" id="ElB-ZI-fln"/>
-                <outlet property="profileImageView" destination="3vs-Pr-HqH" id="pgX-Qt-uof"/>
-                <outlet property="userNmaeLabel" destination="gxw-Hz-78F" id="FYx-bT-Tw9"/>
+                <outlet property="chatContainer" destination="0hh-Kc-FQQ" id="QuP-YA-lLk"/>
+                <outlet property="chatContentLabel" destination="Ewr-CV-2SS" id="xBk-IR-sgi"/>
+                <outlet property="chatTimeLabel" destination="ZoM-6Z-XBo" id="oMm-5T-pYu"/>
+                <outlet property="profileImage" destination="6kE-5e-Q51" id="YjV-rF-89s"/>
+                <outlet property="userNameLabel" destination="0ic-eI-SGv" id="YxT-KB-db5"/>
             </connections>
-            <point key="canvasLocation" x="61.068702290076331" y="46.126760563380287"/>
+            <point key="canvasLocation" x="22.900763358778626" y="44.718309859154935"/>
         </tableViewCell>
     </objects>
     <resources>
