컬렉션뷰 변경

--- a/TravelTalk/Base.lproj/Main.storyboard
+++ b/TravelTalk/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -51,7 +52,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="EL1-In-bEM">
-                                <rect key="frame" x="0.0" y="103" width="393" height="44"/>
+                                <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="zTF-cU-Hmh"/>
                                 </constraints>
@@ -61,14 +62,14 @@
                                 </connections>
                             </searchBar>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0fp-Xj-ggg">
-                                <rect key="frame" x="0.0" y="155" width="393" height="0.66666666666665719"/>
+                                <rect key="frame" x="0.0" y="111" width="393" height="0.6666666666666714"/>
                                 <color key="backgroundColor" systemColor="systemGray2Color"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="0.5" id="Nrs-Uh-oSO"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelectionDuringEditing="YES" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="OrK-hM-m99">
-                                <rect key="frame" x="0.0" y="155.66666666666669" width="393" height="613.33333333333326"/>
+                                <rect key="frame" x="0.0" y="111.66666666666669" width="393" height="706.33333333333326"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
                         </subviews>
@@ -95,7 +96,69 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ulp-fN-QiM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="176.33587786259542" y="-244.36619718309859"/>
+            <point key="canvasLocation" x="137" y="-904"/>
+        </scene>
+        <!--TRAVEL TALK-->
+        <scene sceneID="B2a-tG-SR6">
+            <objects>
+                <viewController storyboardIdentifier="ChatTabViewController" title="TRAVEL TALK" id="cJp-6k-jWv" customClass="ChatTabViewController" customModule="TravelTalk" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="hxt-VH-bNH">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="7SS-vg-n9L">
+                                <rect key="frame" x="0.0" y="103" width="393" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="rBW-KU-WGu"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="2RX-rf-GuZ" id="phr-Eo-ufn"/>
+                                </connections>
+                            </searchBar>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="1W7-1S-onE">
+                                <rect key="frame" x="0.0" y="147" width="393" height="622"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Jfw-EW-4bn">
+                                    <size key="itemSize" width="113" height="89"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="ypJ-PF-gRV">
+                                        <rect key="frame" x="0.0" y="0.0" width="113" height="89"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="fKE-lk-0YB">
+                                            <rect key="frame" x="0.0" y="0.0" width="113" height="89"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="113" height="89"/>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Yt9-fc-G91"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="7SS-vg-n9L" firstAttribute="leading" secondItem="Yt9-fc-G91" secondAttribute="leading" id="8rb-xs-yuY"/>
+                            <constraint firstItem="Yt9-fc-G91" firstAttribute="trailing" secondItem="1W7-1S-onE" secondAttribute="trailing" id="G0u-GJ-fJK"/>
+                            <constraint firstItem="Yt9-fc-G91" firstAttribute="bottom" secondItem="1W7-1S-onE" secondAttribute="bottom" id="Hn3-Mf-D8R"/>
+                            <constraint firstItem="1W7-1S-onE" firstAttribute="leading" secondItem="Yt9-fc-G91" secondAttribute="leading" id="ZmX-Ec-Pyg"/>
+                            <constraint firstItem="7SS-vg-n9L" firstAttribute="top" secondItem="Yt9-fc-G91" secondAttribute="top" id="aF0-2Z-xkL"/>
+                            <constraint firstItem="1W7-1S-onE" firstAttribute="top" secondItem="7SS-vg-n9L" secondAttribute="bottom" id="cqj-iZ-Udu"/>
+                            <constraint firstItem="7SS-vg-n9L" firstAttribute="trailing" secondItem="Yt9-fc-G91" secondAttribute="trailing" id="y9d-F0-aI0"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="41C-BW-c9H"/>
+                    <connections>
+                        <outlet property="chatTabCollectionView" destination="1W7-1S-onE" id="EFk-E6-BSM"/>
+                        <outlet property="searchBar" destination="7SS-vg-n9L" id="Kle-QN-bYP"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lEH-nl-4H2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="232.82442748091603" y="-244.36619718309859"/>
         </scene>
         <!--채팅-->
         <scene sceneID="I2A-Rj-zH5">
@@ -109,7 +172,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="2RX-rf-GuZ" kind="relationship" relationship="rootViewController" id="PG1-Ir-4JK"/>
+                        <segue destination="cJp-6k-jWv" kind="relationship" relationship="rootViewController" id="pmN-Ci-aPA"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="twI-gI-aJR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
