--- a/TravelTalk/ChatTab/ChatRoom/PartnerChatTableViewCell.xib
+++ b/TravelTalk/ChatTab/ChatRoom/PartnerChatTableViewCell.xib
@@ -10,22 +10,22 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PartnerChatTableViewCell" rowHeight="113" id="KGk-i7-Jjw" customClass="PartnerChatTableViewCell" customModule="TravelTalk" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="446" height="113"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PartnerChatTableViewCell" rowHeight="95" id="KGk-i7-Jjw" customClass="PartnerChatTableViewCell" customModule="TravelTalk" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="446" height="95"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="446" height="113"/>
+                <rect key="frame" x="0.0" y="0.0" width="446" height="95"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6kE-5e-Q51">
-                        <rect key="frame" x="20" y="8" width="88" height="88"/>
+                        <rect key="frame" x="20" y="8" width="48" height="48"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="88" id="Iaz-UP-PIX"/>
-                            <constraint firstAttribute="width" constant="88" id="i2C-uT-5Pp"/>
+                            <constraint firstAttribute="height" constant="48" id="Iaz-UP-PIX"/>
+                            <constraint firstAttribute="width" constant="48" id="i2C-uT-5Pp"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0ic-eI-SGv">
-                        <rect key="frame" x="115.99999999999999" y="14" width="41.333333333333329" height="24"/>
+                        <rect key="frame" x="76" y="14" width="41.333333333333343" height="24"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="24" id="IxG-AN-2UM"/>
                         </constraints>
@@ -34,10 +34,10 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0hh-Kc-FQQ">
-                        <rect key="frame" x="116" y="46" width="58" height="59"/>
+                        <rect key="frame" x="76" y="46" width="58" height="41"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ewr-CV-2SS">
-                                <rect key="frame" x="8" y="8" width="42" height="43"/>
+                                <rect key="frame" x="8" y="8" width="42" height="25"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -52,7 +52,7 @@
                         </constraints>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZoM-6Z-XBo">
-                        <rect key="frame" x="178" y="84" width="42" height="21"/>
+                        <rect key="frame" x="138" y="66" width="42" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -80,7 +80,7 @@
                 <outlet property="profileImage" destination="6kE-5e-Q51" id="YjV-rF-89s"/>
                 <outlet property="userNameLabel" destination="0ic-eI-SGv" id="YxT-KB-db5"/>
             </connections>
-            <point key="canvasLocation" x="22.900763358778626" y="44.718309859154935"/>
+            <point key="canvasLocation" x="22.900763358778626" y="38.380281690140848"/>
         </tableViewCell>
     </objects>
     <resources>
